squash some more bugs and center app name

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
 header #app-name {
   width: 90%;
   text-align: center;
+  margin: 0 5% 0 0;
 }
 
 #logo {
@@ -44,7 +45,7 @@ body {
 
 main {
   margin-top: 60px;
-  min-height: 800px;
+  min-height: 900px;
   height: 100%;
   background-image: url("Pokemon_Trading_Card_Game_cardback.jpg");
   background-color: gray;
@@ -149,6 +150,7 @@ main {
   display: flex;
   align-items: center;
   display:none;
+  padding: 0 10%;
 }
 
 .evolution-card-header {
@@ -227,7 +229,7 @@ main {
   font-weight: bold;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   html {
     font-size: 12px;
   }
